Bug 323673 - Marble should focus on .gpx file that is specified on the commandline
Summary: Marble should focus on .gpx file that is specified on the commandline
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.5 (KDE 4.10)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks: 163132
  Show dependency treegraph
 
Reported: 2013-08-18 15:01 UTC by Bernhard Beschow
Modified: 2017-03-09 20:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2013-08-18 15:01:16 UTC
When specifying a .gpx file on the commandline, Marble doesn't focus on the .gpx file's bbox.

Reproducible: Always

Steps to Reproduce:
1. Execute "marble path/to/file.gpx" in a terminal
Actual Results:  
The whole world is visible.

Expected Results:  
Marble should focus on the bbox of the .gpx file.
Comment 1 Bernhard Beschow 2013-08-18 15:59:31 UTC
Git commit af3118ed95df864ad58abec1ebd8aef146992701 by Bernhard Beschow.
Committed on 18/08/2013 at 14:40.
Pushed by beschow into branch 'master'.

fix: focus on file passed via command line

* if multiple files are passed, Marble now focuses on the combined bbox of all files

M  +11   -3    src/lib/FileLoader.cpp
M  +2    -1    src/lib/FileLoader.h
M  +7    -8    src/lib/FileManager.cpp

http://commits.kde.org/marble/af3118ed95df864ad58abec1ebd8aef146992701
Comment 2 Bernhard Beschow 2013-08-19 17:49:23 UTC
Git commit 3862cd73b5e07e2e56c749046d780e4bab088615 by Bernhard Beschow.
Committed on 19/08/2013 at 17:43.
Pushed by beschow into branch 'master'.

fix: Qt-only version now focuses on files passed via commandline, too

M  +17   -0    src/QtMainWindow.cpp
M  +3    -0    src/QtMainWindow.h
M  +1    -1    src/qtmain.cpp

http://commits.kde.org/marble/3862cd73b5e07e2e56c749046d780e4bab088615
Comment 3 Bernhard Beschow 2013-08-29 14:50:32 UTC
Git commit 6907dd92faec117b304215a248fb2a9f73c7bc9f by Bernhard Beschow.
Committed on 18/08/2013 at 14:40.
Pushed by beschow into branch 'KDE/4.11'.

fix: focus on file passed via command line

* if multiple files are passed, Marble now focuses on the combined bbox of all files
(cherry picked from commits af3118ed95df864ad58abec1ebd8aef146992701 and a8ac8cf46505a841e83efede9eee615d9035d8f9)

M  +11   -3    src/lib/FileLoader.cpp
M  +2    -1    src/lib/FileLoader.h
M  +10   -8    src/lib/FileManager.cpp

http://commits.kde.org/marble/6907dd92faec117b304215a248fb2a9f73c7bc9f
Comment 4 Bernhard Beschow 2013-08-29 14:50:33 UTC
Git commit 98c62343a6adecd32e759bf3665adca13f13367f by Bernhard Beschow.
Committed on 19/08/2013 at 17:43.
Pushed by beschow into branch 'KDE/4.11'.

fix: Qt-only version now focuses on files passed via commandline, too
(cherry picked from commit 3862cd73b5e07e2e56c749046d780e4bab088615)

M  +17   -0    src/QtMainWindow.cpp
M  +3    -0    src/QtMainWindow.h
M  +1    -1    src/qtmain.cpp

http://commits.kde.org/marble/98c62343a6adecd32e759bf3665adca13f13367f
Comment 5 Stefan Bauer 2017-03-09 20:48:03 UTC
Looks like there is a regression with this functionality, it is no longer working in Marble 2.1.0. Shall this bug be reopened or a new one created?