fix: focus on file passed via command line

* if multiple files are passed, Marble now focuses on the combined bbox of all files

BUG: 323673
(cherry picked from commits af3118ed95df864ad58abec1ebd8aef146992701 and a8ac8cf46505a841e83efede9eee615d9035d8f9)