src/lib/FileLoader.h
@@ -26,13 +26,14 @@ class FileLoader : public QThread
 {
     Q_OBJECT
     public:
-        FileLoader( QObject* parent, MarbleModel *model,
+        FileLoader( QObject* parent, MarbleModel *model, bool recenter,
                     const QString& file, const QString& property, GeoDataStyle* style, DocumentRole role );
         FileLoader( QObject* parent, MarbleModel *model,
                     const QString& contents, const QString& name, DocumentRole role );
         virtual ~FileLoader();
 
         void run();
+        bool recenter() const;
         QString path() const;
         GeoDataDocument *document();
         QString error() const;
